--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,17 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
-/coverage
+# typescript
+*.tsbuildinfo
 
 # next.js
 /.next/
 /out/
 
-# production
-/build
+# testing
+/coverage
 
 # misc
 .DS_Store
@@ -28,18 +23,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
-# vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# env
+.env
+.env*.local
 
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+# rooms data
+/data
