--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,15 @@
 /.pnp
 .pnp.js
 
-# typescript
-*.tsbuildinfo
+# testing
+/coverage
 
 # next.js
 /.next/
 /out/
 
-# testing
-/coverage
+# production
+/build
 
 # misc
 .DS_Store
@@ -23,11 +23,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
 .vercel
 
-# env
-.env
-.env*.local
-
-# rooms data
-/data
+# typescript
+*.tsbuildinfo
+next-env.d.ts
