--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
@@ -60,8 +61,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "create-file": "^1.0.1",
+    "stream-chat": "^8.38.0",
+    "stream-chat-react": "^11.23.0",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "genkit-cli": "^1.14.1",
