--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
 *.pem
 
@@ -23,10 +24,19 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
-.env*.local
+# Local .env file
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# genkit
+.genkit/cache
+.genkit/log
+.genkit/state
 
 # vercel
 .vercel
