--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Code Yapp - Private & Ephemeral Chat",
   "short_name": "Code Yapp",
-  "description": "Private, ephemeral, and secure chat rooms. Perfect for developers and anyone needing an 'off the record' conversation.",
+  "description": "Grab a secure, temporary chat room perfect for sharing code, spilling secrets, or plotting your snack heist 'off the record' without leaving a trail of awkward screenshots. Think of it as incognito mode for conversations.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#18181b",
   "theme_color": "#27272a",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
