--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -42,8 +38,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.14.1",
-    "ioredis": "^5.4.1",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.8",
     "next-pwa": "^5.6.0",
@@ -62,16 +57,14 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "@types/ioredis": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
-    "create-file": "^1.0.1",
-    "stream-chat": "^8.38.0",
-    "stream-chat-react": "^11.23.0",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "genkit-cli": "^1.14.1",
+    "create-file": "^1.0.1",
     "postcss": "^8",
+    "stream-chat": "^8.38.0",
+    "stream-chat-react": "^11.23.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
